--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<link rel="icon" href="img/logo.png">
 	<link rel="shortcut icon" href="" type="img/logo.png">
 
-	<meta property="og:title" content="Тайтл сниппета">
+	<meta property="og:title" content="Строим с умом">
  	<meta property="og:description" content="Описание">
  	<meta property="og:type" content="article" >
  	<meta property="og:image" content="" >
- 	<meta property="og:site_name" content="WAYUP" >
+ 	<meta property="og:site_name" content="Stroi Club" >
 </head>
 <body>
 <div class="side-bar">
